// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "column": Object {
    "data": "Bar",
    "title": "Foo",
  },
  "data": [Function],
  "dataClassNames": [Function],
  "dataGetter": [Function],
  "title": [Function],
  "titleClassNames": "",
  "titleGetter": [Function],
}
`;

exports[`resolveTitle 1`] = `
Object {
  "title": [Function],
  "titleClassNames": "",
  "titleGetter": [Function],
}
`;

exports[`resolveTitle title 1`] = `
Object {
  "title": [Function],
  "titleClassNames": "foo bar",
}
`;

exports[`resolveTitle titleClassNames 1`] = `
Object {
  "title": [Function],
  "titleClassNames": "foo bar",
  "titleGetter": [Function],
}
`;
